--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,20 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.webjars.npm:bootstrap:5.2.3'
+	implementation 'org.webjars.npm:bootstrap-icons:1.10.3'
 	// webjars 사이트에서 gradle 선택 + bootstrap 검색 (부트스트랩다운)
 	// complie 컴파일 할때 동작
 	// implementation 처음에 동작할때
+	// 타임리프 레이아웃 - 라이브러리 thymeleaf-layout-dialect
+	// 라이브러리 종속성 추가 후에는 반드시 빌드(gradle) 새로고침하기!
+
 }
 
 tasks.named('test') {
